// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegionContainer mapStateToProps 1`] = `
Object {
  "data": Object {
    "error": false,
    "loading": false,
    "region": Object {
      "id": "oakland",
      "isSelected": true,
    },
    "store": Object {
      "region": Object {
        "id": "oakland",
        "mapbox": Object {
          "viewport": Object {
            "latitude": 37,
            "longitude": -119,
            "zoom": 5,
          },
        },
        "name": "Oakland",
      },
    },
  },
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "backgroundColor": "blue",
    "border": 0,
    "color": "white",
    "display": "inline-block",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "fontWeight": "bold",
    "height": 720,
    "margin": 0,
    "paddingBottom": 8,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 8,
    "textDecoration": "none",
    "width": 1080,
  },
}
`;

exports[`RegionContainer query 1`] = `
Object {
  "data": Object {
    "store": Object {
      "__typename": "Store",
      "region": Object {
        "__typename": "Region",
        "id": "oakland",
        "mapbox": Object {
          "__typename": "Mapbox",
          "viewport": Object {
            "__typename": "Viewport",
            "latitude": 37,
            "longitude": -119,
            "zoom": 5,
            Symbol(id): "$Region:oakland.mapbox.viewport",
          },
          Symbol(id): "$Region:oakland.mapbox",
        },
        "name": "Oakland",
        Symbol(id): "Region:oakland",
      },
      Symbol(id): "$ROOT_QUERY.store",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`RegionContainer render 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "region": Object {
      "id": "oakland",
      "isSelected": true,
    },
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "regionId": "oakland",
    },
  },
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "backgroundColor": "blue",
    "border": 0,
    "color": "white",
    "display": "inline-block",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "fontWeight": "bold",
    "height": 720,
    "margin": 0,
    "paddingBottom": 8,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 8,
    "textDecoration": "none",
    "width": 1080,
  },
}
`;

exports[`RegionContainer renderError 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "region": Object {
      "id": "foo",
      "isSelected": true,
    },
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "regionId": "foo",
    },
  },
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "backgroundColor": "blue",
    "border": 0,
    "color": "white",
    "display": "inline-block",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "fontWeight": "bold",
    "height": 720,
    "margin": 0,
    "paddingBottom": 8,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 8,
    "textDecoration": "none",
    "width": 1080,
  },
}
`;
